...
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:fitsSystemWindows="true"
    tools:context=".view.LoginPage">

    <Spinner
        android:id="@+id/languageSpinner"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/cornerround" />
...
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        app:layout_anchorGravity="center|end"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <LinearLayout
        android:id="@+id/loginPage"
        android:layout_width="411dp"
        android:layout_height="635dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:angle="45"
...
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:padding="15dp"
            android:translationY="200dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginUserNameInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6F4F4F4"
                android:hint="@string/email"
                android:textColorHint="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>
...
            android:layout_margin="15dp"
            android:padding="15dp"
            android:translationY="200dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E6F4F4F4"
                android:hint="@string/password"
                android:password="true"
                android:textColorHint="#000000" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#5D576B"
...
            android:textColor="#F3F3F3"
            android:textSize="20dp"
            android:textStyle="bold"
            android:translationY="240dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="#5D576B"
...
