...
        app:layout_constraintTop_toTopOf="@+id/ActivityDataHistoryList"
        app:layout_constraintVertical_bias="0.648">

    </TextView>

    <Button
        android:id="@+id/activity_StartActivityButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:textSize="20dp"
        android:textStyle="bold"
        android:backgroundTint="#5D576B"
        android:layout_marginBottom="24dp"
        android:text="@string/start_activity"
        app:layout_constraintBottom_toTopOf="@+id/activity_StopActivityButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/activity_StopActivityButton"
        android:layout_width="250dp"
...
